# Langchain-course

./: pyproject.toml  requirement.txt
Agents/: agents.ipynb
App/: app.py
Hugging Face/: huggingface.ipynb
api/: app.py  client.py  streamlit_app.py
chatbot/: app.py  localama.py
rag/: simplerag.ipynb  speech.txt
retriever/: retriever.ipynb
streamlit app/: streamlit_app.py
